--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "Network for teachers to get school supplies",
   "main": "server.js",
   "scripts": {
-    "client-install": "npm install --prefix client",
-    "start": "node server.js",
-    "server": "nodemon server.js",
-    "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "start": "if-env NODE_ENV=production && yarn start:prod || yarn start:dev",
+    "start:prod": "node server.js",
+    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"yarn client\"",
+    "client": "cd client && yarn start",
+    "install": "cd client && yarn install",
+    "build": "cd client && yarn build",
+    "heroku-postbuild": "yarn build"
   },
   "author": "John Yi",
   "license": "MIT",
@@ -22,9 +24,11 @@
     "mongoose": "^5.2.14",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
-    "validator": "^10.7.1"
+    "validator": "^10.7.1",
+    "if-env": "^1.0.4"
   },
   "devDependencies": {
-    "nodemon": "^1.18.4"
+    "concurrently": "^3.5.0",
+    "nodemon": "^1.11.0"
   }
 }
